--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "push-dir": "^0.4.1",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.7.2",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,7 +23,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "axios": "^0.26.1",
+    "axios": "^1.6.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-cli-plugin-vuetify": "^2.4.8",
